{
  "version": 4,
  "terraform_version": "1.9.3",
  "serial": 209,
  "lineage": "85f72544-2ac9-9bf0-1237-26d199d6c264",
  "resources": [
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_tasks_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:008971661410:security-group/sg-0fada814d77dc011c",
            "description": "Security group for ECS tasks",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fada814d77dc011c",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02545ad69431b290b"
                ],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 443
              }
            ],
            "name": "dev-amplifygenai-service-ecs-tasks",
            "name_prefix": "",
            "owner_id": "008971661410",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-01601e5b5d483e580"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.load_balancer.aws_acm_certificate.ssl_cert",
            "module.load_balancer.aws_acm_certificate.ssl_san_cert",
            "module.load_balancer.aws_acm_certificate_validation.ssl_cert_validation",
            "module.load_balancer.aws_acm_certificate_validation.ssl_san_cert_validation",
            "module.load_balancer.aws_eip.nat",
            "module.load_balancer.aws_internet_gateway.igw",
            "module.load_balancer.aws_lb.alb",
            "module.load_balancer.aws_lb_listener.http",
            "module.load_balancer.aws_lb_listener.https",
            "module.load_balancer.aws_lb_listener.https_root_redirect",
            "module.load_balancer.aws_lb_listener_rule.redirect_rule",
            "module.load_balancer.aws_lb_listener_rule.rule",
            "module.load_balancer.aws_lb_listener_rule.www_rule",
            "module.load_balancer.aws_lb_target_group.tg",
            "module.load_balancer.aws_nat_gateway.nat_gw",
            "module.load_balancer.aws_route.private_nat_gw",
            "module.load_balancer.aws_route53_record.cert_validation",
            "module.load_balancer.aws_route53_record.root_alias",
            "module.load_balancer.aws_route53_record.root_cname",
            "module.load_balancer.aws_route53_record.san_cert_validation",
            "module.load_balancer.aws_route53_record.www_cname",
            "module.load_balancer.aws_route_table.private",
            "module.load_balancer.aws_route_table.public",
            "module.load_balancer.aws_route_table_association.private",
            "module.load_balancer.aws_route_table_association.public",
            "module.load_balancer.aws_s3_bucket.alb_access_logs",
            "module.load_balancer.aws_s3_bucket_policy.alb_access_logs_policy",
            "module.load_balancer.aws_security_group.alb_sg",
            "module.load_balancer.aws_subnet.private",
            "module.load_balancer.aws_subnet.public",
            "module.load_balancer.aws_vpc.main",
            "module.load_balancer.aws_vpc_endpoint.s3",
            "module.load_balancer.data.aws_availability_zones.available",
            "module.load_balancer.data.aws_caller_identity.current",
            "module.load_balancer.random_id.random"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05819126b028681cc",
            "association_id": "eipassoc-0c642355aed87d366",
            "domain": "vpc",
            "id": "eipalloc-05819126b028681cc",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0792510badb98b425",
            "private_dns": "ip-10-0-22-185.ec2.internal",
            "private_ip": "10.0.22.185",
            "public_dns": "ec2-18-211-207-30.compute-1.amazonaws.com",
            "public_ip": "18.211.207.30",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:008971661410:internet-gateway/igw-03dceebce4c732001",
            "id": "igw-03dceebce4c732001",
            "owner_id": "008971661410",
            "tags": {
              "Name": "main-igw"
            },
            "tags_all": {
              "Name": "main-igw"
            },
            "vpc_id": "vpc-01601e5b5d483e580"
          },
          "dependencies": [
            "module.load_balancer.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "bucket": "dev-amplifygenai-alb-access-logs-97008c3dda25360f",
                "enabled": true
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:008971661410:loadbalancer/app/dev-amplifygenai-alb/a09c617cfd77d850",
            "arn_suffix": "app/dev-amplifygenai-alb/a09c617cfd77d850",
            "desync_mitigation_mode": "defensive",
            "dns_name": "dev-amplifygenai-alb-1757538626.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:008971661410:loadbalancer/app/dev-amplifygenai-alb/a09c617cfd77d850",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "dev-amplifygenai-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-02545ad69431b290b"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-07026e4ec24b0acca"
              },
              {
                "subnet_id": "subnet-0c6580baf70317591"
              }
            ],
            "subnets": [
              "subnet-07026e4ec24b0acca",
              "subnet-0c6580baf70317591"
            ],
            "vpc_id": "vpc-01601e5b5d483e580",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.load_balancer.aws_acm_certificate.ssl_cert",
            "module.load_balancer.aws_acm_certificate_validation.ssl_cert_validation",
            "module.load_balancer.aws_route53_record.cert_validation",
            "module.load_balancer.aws_s3_bucket.alb_access_logs",
            "module.load_balancer.aws_security_group.alb_sg",
            "module.load_balancer.aws_subnet.public",
            "module.load_balancer.aws_vpc.main",
            "module.load_balancer.data.aws_availability_zones.available",
            "module.load_balancer.random_id.random"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:008971661410:listener/app/dev-amplifygenai-alb/a09c617cfd77d850/f9594bad808bc073",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:008971661410:listener/app/dev-amplifygenai-alb/a09c617cfd77d850/f9594bad808bc073",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:008971661410:loadbalancer/app/dev-amplifygenai-alb/a09c617cfd77d850",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.load_balancer.aws_acm_certificate.ssl_cert",
            "module.load_balancer.aws_acm_certificate_validation.ssl_cert_validation",
            "module.load_balancer.aws_lb.alb",
            "module.load_balancer.aws_route53_record.cert_validation",
            "module.load_balancer.aws_s3_bucket.alb_access_logs",
            "module.load_balancer.aws_security_group.alb_sg",
            "module.load_balancer.aws_subnet.public",
            "module.load_balancer.aws_vpc.main",
            "module.load_balancer.data.aws_availability_zones.available",
            "module.load_balancer.random_id.random"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:008971661410:listener/app/dev-amplifygenai-alb/a09c617cfd77d850/7650e9a8d1daecec",
            "certificate_arn": "arn:aws:acm:us-east-1:008971661410:certificate/608a2395-8688-44c4-8f44-0f69d5a1d427",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "You've reached the end",
                    "status_code": "200"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:008971661410:listener/app/dev-amplifygenai-alb/a09c617cfd77d850/7650e9a8d1daecec",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:008971661410:loadbalancer/app/dev-amplifygenai-alb/a09c617cfd77d850",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-TLS-1-2-Ext-2018-06",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.load_balancer.aws_acm_certificate.ssl_cert",
            "module.load_balancer.aws_acm_certificate_validation.ssl_cert_validation",
            "module.load_balancer.aws_lb.alb",
            "module.load_balancer.aws_route53_record.cert_validation",
            "module.load_balancer.aws_s3_bucket.alb_access_logs",
            "module.load_balancer.aws_security_group.alb_sg",
            "module.load_balancer.aws_subnet.public",
            "module.load_balancer.aws_vpc.main",
            "module.load_balancer.data.aws_availability_zones.available",
            "module.load_balancer.random_id.random"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:008971661410:targetgroup/dev-amplifygenai-tg-3000/eda3cdd22f00cd65",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:008971661410:listener-rule/app/dev-amplifygenai-alb/a09c617cfd77d850/7650e9a8d1daecec/a073db066b78557a",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "fekgpt.com"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:008971661410:listener-rule/app/dev-amplifygenai-alb/a09c617cfd77d850/7650e9a8d1daecec/a073db066b78557a",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:008971661410:listener/app/dev-amplifygenai-alb/a09c617cfd77d850/7650e9a8d1daecec",
            "priority": 1,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.load_balancer.aws_acm_certificate.ssl_cert",
            "module.load_balancer.aws_acm_certificate_validation.ssl_cert_validation",
            "module.load_balancer.aws_lb.alb",
            "module.load_balancer.aws_lb_listener.https",
            "module.load_balancer.aws_lb_target_group.tg",
            "module.load_balancer.aws_route53_record.cert_validation",
            "module.load_balancer.aws_s3_bucket.alb_access_logs",
            "module.load_balancer.aws_security_group.alb_sg",
            "module.load_balancer.aws_subnet.public",
            "module.load_balancer.aws_vpc.main",
            "module.load_balancer.data.aws_availability_zones.available",
            "module.load_balancer.random_id.random"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:008971661410:targetgroup/dev-amplifygenai-tg-3000/eda3cdd22f00cd65",
            "arn_suffix": "targetgroup/dev-amplifygenai-tg-3000/eda3cdd22f00cd65",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200,301",
                "path": "/",
                "port": "3000",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:008971661410:targetgroup/dev-amplifygenai-tg-3000/eda3cdd22f00cd65",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "dev-amplifygenai-tg-3000",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-01601e5b5d483e580"
          },
          "dependencies": [
            "module.load_balancer.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05819126b028681cc",
            "association_id": "eipassoc-0c642355aed87d366",
            "connectivity_type": "public",
            "id": "nat-0b4540af3816bcead",
            "network_interface_id": "eni-0792510badb98b425",
            "private_ip": "10.0.22.185",
            "public_ip": "18.211.207.30",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-07026e4ec24b0acca",
            "tags": {
              "Name": "main-nat-gw"
            },
            "tags_all": {
              "Name": "main-nat-gw"
            }
          },
          "dependencies": [
            "module.load_balancer.aws_eip.nat",
            "module.load_balancer.aws_internet_gateway.igw",
            "module.load_balancer.aws_subnet.public",
            "module.load_balancer.aws_vpc.main",
            "module.load_balancer.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-00b1f70e4006f07bb1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0b4540af3816bcead",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-00b1f70e4006f07bb",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.load_balancer.aws_eip.nat",
            "module.load_balancer.aws_internet_gateway.igw",
            "module.load_balancer.aws_nat_gateway.nat_gw",
            "module.load_balancer.aws_route_table.private",
            "module.load_balancer.aws_subnet.public",
            "module.load_balancer.aws_vpc.main",
            "module.load_balancer.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:008971661410:route-table/rtb-00b1f70e4006f07bb",
            "id": "rtb-00b1f70e4006f07bb",
            "owner_id": "008971661410",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0b4540af3816bcead",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-route-table"
            },
            "tags_all": {
              "Name": "private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-01601e5b5d483e580"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.load_balancer.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:008971661410:route-table/rtb-07fc0eda8a38a04b4",
            "id": "rtb-07fc0eda8a38a04b4",
            "owner_id": "008971661410",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03dceebce4c732001",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-route-table"
            },
            "tags_all": {
              "Name": "public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-01601e5b5d483e580"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.load_balancer.aws_internet_gateway.igw",
            "module.load_balancer.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0be514551cedca736",
            "route_table_id": "rtb-00b1f70e4006f07bb",
            "subnet_id": "subnet-0870e77440834614b"
          },
          "dependencies": [
            "module.load_balancer.aws_route_table.private",
            "module.load_balancer.aws_subnet.private",
            "module.load_balancer.aws_vpc.main",
            "module.load_balancer.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0673e1e98fef44bbe",
            "route_table_id": "rtb-00b1f70e4006f07bb",
            "subnet_id": "subnet-04e04832760195ad7"
          },
          "dependencies": [
            "module.load_balancer.aws_route_table.private",
            "module.load_balancer.aws_subnet.private",
            "module.load_balancer.aws_vpc.main",
            "module.load_balancer.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03ee49b45a950f6cc",
            "route_table_id": "rtb-07fc0eda8a38a04b4",
            "subnet_id": "subnet-07026e4ec24b0acca"
          },
          "dependencies": [
            "module.load_balancer.aws_internet_gateway.igw",
            "module.load_balancer.aws_route_table.public",
            "module.load_balancer.aws_subnet.public",
            "module.load_balancer.aws_vpc.main",
            "module.load_balancer.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-085952c2a51b014a2",
            "route_table_id": "rtb-07fc0eda8a38a04b4",
            "subnet_id": "subnet-0c6580baf70317591"
          },
          "dependencies": [
            "module.load_balancer.aws_internet_gateway.igw",
            "module.load_balancer.aws_route_table.public",
            "module.load_balancer.aws_subnet.public",
            "module.load_balancer.aws_vpc.main",
            "module.load_balancer.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:008971661410:security-group/sg-02545ad69431b290b",
            "description": "Security group for ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02545ad69431b290b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP traffic from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPS traffic from anywhere",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "dev-amplifygenai-sg",
            "name_prefix": "",
            "owner_id": "008971661410",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-01601e5b5d483e580"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.load_balancer.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:008971661410:subnet/subnet-0870e77440834614b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.144.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0870e77440834614b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "008971661410",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-0"
            },
            "tags_all": {
              "Name": "private-subnet-0"
            },
            "vpc_id": "vpc-01601e5b5d483e580"
          },
          "dependencies": [
            "module.load_balancer.aws_vpc.main",
            "module.load_balancer.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:008971661410:subnet/subnet-04e04832760195ad7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.128.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04e04832760195ad7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "008971661410",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-1"
            },
            "tags_all": {
              "Name": "private-subnet-1"
            },
            "vpc_id": "vpc-01601e5b5d483e580"
          },
          "dependencies": [
            "module.load_balancer.aws_vpc.main",
            "module.load_balancer.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:008971661410:subnet/subnet-07026e4ec24b0acca",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07026e4ec24b0acca",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "008971661410",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-0"
            },
            "tags_all": {
              "Name": "public-subnet-0"
            },
            "vpc_id": "vpc-01601e5b5d483e580"
          },
          "dependencies": [
            "module.load_balancer.aws_vpc.main",
            "module.load_balancer.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:008971661410:subnet/subnet-0c6580baf70317591",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c6580baf70317591",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "008971661410",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-1"
            },
            "tags_all": {
              "Name": "public-subnet-1"
            },
            "vpc_id": "vpc-01601e5b5d483e580"
          },
          "dependencies": [
            "module.load_balancer.aws_vpc.main",
            "module.load_balancer.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:008971661410:vpc/vpc-01601e5b5d483e580",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09e203ad68aacec24",
            "default_route_table_id": "rtb-0a0d7c0cae68077df",
            "default_security_group_id": "sg-060a4be477b286ede",
            "dhcp_options_id": "dopt-0c4e86721fa001f70",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01601e5b5d483e580",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a0d7c0cae68077df",
            "owner_id": "008971661410",
            "tags": {
              "Name": "dev-main-vpc"
            },
            "tags_all": {
              "Name": "dev-main-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:008971661410:vpc-endpoint/vpce-0abfd1d5e35560e5d",
            "cidr_blocks": [
              "16.15.176.0/20",
              "16.182.0.0/16",
              "18.34.0.0/19",
              "52.216.0.0/15",
              "54.231.0.0/16",
              "3.5.0.0/19",
              "18.34.232.0/21",
              "16.15.192.0/18"
            ],
            "id": "vpce-0abfd1d5e35560e5d",
            "owner_id": "008971661410",
            "policy": "{\"Statement\":[{\"Action\":[\"s3:*\"],\"Condition\":{\"StringEquals\":{\"aws:sourceVpc\":\"vpc-01601e5b5d483e580\"}},\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":[\"arn:aws:s3:::*/*\"]}],\"Version\":\"2012-10-17\"}",
            "prefix_list_id": "pl-63a5400a",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-00b1f70e4006f07bb",
              "rtb-07fc0eda8a38a04b4"
            ],
            "service_name": "com.amazonaws.us-east-1.s3",
            "state": "available",
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-01601e5b5d483e580"
          },
          "dependencies": [
            "module.load_balancer.aws_internet_gateway.igw",
            "module.load_balancer.aws_route_table.private",
            "module.load_balancer.aws_route_table.public",
            "module.load_balancer.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}